--- a/templates/resource-report.html
+++ b/templates/resource-report.html
@@ -433,14 +433,29 @@
 
     const wellMap = new ol.Map({
         target: 'wellMap',
-        layers: [new ol.layer.Tile({
+        layers: [
+        new ol.layer.Tile({
                     source: new ol.source.XYZ({
                         url: `https://mt1.google.com/vt/lyrs=y&x={x}&y={y}&z={z}`,
                         maxZoom: 30,
                         transition: 500,
                     }),
                     preload: 4,
-                })],
+                }),
+                new ol.layer.Image({
+                    source : new ol.source.ImageWMS({
+                        url : 'https://geoserver.core-stack.org:8443/geoserver/wms',
+                        params : {
+                            'LAYERS': "stream_order:stream_order_{{district}}_{{block}}_raster",
+                            'STYLES' : "stream_order"
+                        },
+                        ratio : 1,
+                        serverType: 'geoserver',
+                    }),
+                    visible : true,
+                    name : 'stream_raster'
+                })
+                ],
         view: new ol.View({
             center: [78.9, 23.6],
             zoom: 10,
